# ioctlance

./: .gitignore  API_README.md  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.cli  Dockerfile.simple  README.md  REFACTOR_SUMMARY.md  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml  run_benchmark.sh
analysis/: hooks.py  ioctlance.py
docs/: REFACTOR_SUMMARY.md
docs/examples/: example_output_truncated.json  ilp60x64_3_analysis.json  ilp60x64_3_complete_analysis.json
examples/clients/: README.md  curl_client.sh  httpx_client.py  websocket_client.py
samples/: AmPeStorU.sys  RTKVHD64_2.sys.json  RtDashPt.sys  RtDashPt.sys.json  ilp60x64_3.sys  ilp60x64_3.sys.new.json  test_physical_memory.sys  test_process_termination.sys  test_race_condition.sys  test_use_after_free.sys
scripts/testing/: test_api.sh
src/ioctlance/: __version__.py  cli.py  type_stubs.py
src/ioctlance/api/: __init__.py  app.py  main.py
src/ioctlance/core/: analysis_context.py  driver_analyzer.py  ioctl_handler.py  opcode_scanner.py  vulnerability_hunter.py
src/ioctlance/detectors/: __init__.py  arbitrary_rw.py  base.py  double_free.py  file_operations.py  format_string.py  integer_overflow.py  null_pointer.py  physical_memory.py  probe_bypass.py  process_termination.py  race_condition.py  shellcode.py  stack_buffer_overflow.py  use_after_free.py
src/ioctlance/hooks/: __init__.py  base.py  executive.py  file_operations.py  io_manager.py  kernel.py  memcpy.py  memory.py  native_api.py  object_manager.py  opcodes.py  process.py  registry.py  runtime.py  utility.py
src/ioctlance/models/: __init__.py  analysis_result.py  driver.py  raw_state.py  vulnerability.py
src/ioctlance/symbolic/: breakpoints.py  kernel_types.py  techniques.py
src/ioctlance/utils/: helpers.py  state_capture.py
test_drivers/: test_file_operations.c  test_file_operations.sys  test_memcpy_stub.c  test_memcpy_stub.sys  test_ob_stub.c  test_ob_stub.sys  test_physical_memory.c  test_process_termination.c  test_race_condition.c  test_use_after_free.c
tests/: run_benchmark.sh
tests/integration/: test_dataset_benchmark.py  test_detector_specific.py  test_driver_analysis.py  test_real_vulnerabilities.py  test_rtdashpt_analysis.py.old  test_rtdashpt_simple.py
tests/test_binaries/: Makefile  build_all_drivers.sh  build_test_drivers.sh  build_with_dpp.sh  ioctlance_test.c  kernel_stubs.c  minimal_driver.c  proper_driver.c  simple_vuln.c  test_double_free.c  test_driver.c  test_physical_memory.c  test_probe_bypass.c  test_process_termination.c  vulnerable_examples.c  wdm_driver.c  working_test.c
tests/unit/: test_detectors.py  test_helpers.py
